@@ -1,3 +1,11 @@
+2004-03-27  Dominique Devriese  <devriese@kde.org>
+
+	* Fix a translation issue with internal macro's.
+
+	* Make a TextImp transformable by simply transforming its
+	location, and showing the text label in that location again (
+	fixes: 78407 ).
+
 2004-03-26  Pino Toscano <toscano.pino@tiscali.it>
 
 	* Implement a popup menu submenu for changing the line style of an object.
